kdirwatch: fix a recently introduced crash

Summary:
Prevent a crash when browsing nfs without FAM installed introduced in D28349

BUG: 419428

Reviewers: bruns, #frameworks, iasensio

Reviewed By: bruns, iasensio

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D28457